--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,15 @@ django-heroku==0.3.1
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
 gunicorn==20.0.4
+httpie==2.0.0
 idna==2.8
+Markdown==3.1.1
+numpy==1.18.1
 oauthlib==3.1.0
+opencv-python==4.1.2.30
 psycopg2==2.7.5
 psycopg2-binary==2.8.4
+Pygments==2.5.2
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.22.0
